test/semantic_errors/invalid_return3.mc
int main() {
    bool b;
    if (b) { 
        return; /* missing return value */
    } else {
        return 1;
    }
}